--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вопросы</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,6 +17,7 @@
             padding: 15px;
             margin-bottom: 15px;
             background-color: #fff;
+            border-radius: 4px;
         }
         .question p {
             margin: 5px 0;
@@ -47,9 +49,12 @@
     </style>
 </head>
 <body>
-<div id="questions-container"></div>
-<button id="check-button" onclick="checkAnswers()">Проверить</button>
+<div id="questions-container" class="container"></div>
+<button id="check-button" class="btn btn-primary mt-3">Проверить</button>
 <p id="result"></p>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
