translate to Ukrainian

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Головна сторінка</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
-    <h1>Добро пожаловать!</h1>
+    <br>
+    <br>
+    <h4>Підготовка до тестування на посади суддів апеляційних судів</h4>
     <div class="block">
-        <h2>Загрузить 100 случайных вопросов</h2>
-        <a href="random.html">Перейти</a>
+        <a href="random.html">100 випадкових запитань</a>
     </div>
     <div class="block">
-        <h2>Загрузить 100 последовательных вопросов</h2>
-        <a href="sequential.html">Перейти</a>
+        <a href="sequential.html">100 послідовних запитань</a>
     </div>
 </div>
 </body>
