--- a/random.html
+++ b/random.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Случайные вопросы</title>
+    <title>Випадкові запитання</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
     <div id="questions-container"></div>
-    <button id="check-button" class="btn btn-primary mt-3">Проверить</button>
+    <button id="check-button" class="btn btn-primary mt-3">Перевірити</button>
     <p id="result"></p>
 </div>
 <script src="script.js"></script>
@@ -22,7 +22,7 @@
                 questions = getRandomQuestions(data, 100);
                 displayQuestions(questions);
             })
-            .catch(error => console.error('Ошибка загрузки вопросов:', error));
+            .catch(error => console.error('Помилка завантаження запитань:', error));
     });
 </script>
 </body>
