--- a/sequential.html
+++ b/sequential.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Последовательные вопросы</title>
+    <title>Послідовні запитання</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
-    <input type="number" id="start-index" min="1" max="2706" class="form-control mb-3" placeholder="Введите номер">
-    <button id="load-sequential" class="btn btn-primary mb-3">Загрузить</button>
+    <input type="number" id="start-index" min="1" max="2706" class="form-control mb-3" placeholder="Введіть номер">
+    <button id="load-sequential" class="btn btn-primary mb-3">Завантажити</button>
     <div id="questions-container"></div>
-    <button id="check-button" class="btn btn-primary mt-3" style="display: none;">Проверить</button>
+    <button id="check-button" class="btn btn-primary mt-3" style="display: none;">Перевірити</button>
     <p id="result"></p>
 </div>
 <script src="script.js"></script>
@@ -21,7 +21,7 @@
         document.getElementById("load-sequential").addEventListener("click", () => {
             const startIndex = parseInt(document.getElementById("start-index").value);
             if (isNaN(startIndex) || startIndex < 1 || startIndex > 2706) {
-                alert("Введите корректное значение от 1 до 2706");
+                alert("Введіть коректне значення від 1 до 2706");
                 return;
             }
             fetch('questions.json')
@@ -31,7 +31,7 @@
                     displayQuestions(questions);
                     document.getElementById("check-button").style.display = 'block';
                 })
-                .catch(error => console.error('Ошибка загрузки вопросов:', error));
+                .catch(error => console.error('Помилка завантаження запитань:', error));
         });
     });
 </script>
