--- a/sequential.html
+++ b/sequential.html
@@ -16,5 +16,24 @@
     <p id="result"></p>
 </div>
 <script src="script.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("load-sequential").addEventListener("click", () => {
+            const startIndex = parseInt(document.getElementById("start-index").value);
+            if (isNaN(startIndex) || startIndex < 1 || startIndex > 2706) {
+                alert("Введіть коректне значення від 1 до 2706");
+                return;
+            }
+            fetch('questions.json')
+                .then(response => response.json())
+                .then(data => {
+                    questions = getSequentialQuestions(data, startIndex, 100);
+                    displayQuestions(questions);
+
+                })
+                .catch(error => console.error('Помилка завантаження запитань:', error));
+        });
+    });
+</script>
 </body>
 </html>
