--- a/sequential.html
+++ b/sequential.html
@@ -29,7 +29,7 @@
                 .then(data => {
                     questions = getSequentialQuestions(data, startIndex, 100);
                     displayQuestions(questions);
-
+                    document.getElementById("check-button").style.display = 'block';
                 })
                 .catch(error => console.error('Помилка завантаження запитань:', error));
         });
